--- a/setup.cfg
+++ b/setup.cfg
@@ -16,5 +16,4 @@ use_parentheses = true
 [coverage:run]
 include = console-service/*
 omit = *migrations*, *tests*
-plugins =
-    django_coverage_plugin
+plugins = django_coverage_plugin
